# parallel_and_distributed_computing

./: .gitignore  README.md
compare/: CMakeLists.txt
compare/data/: comparison.mpi.csv  comparison.omp.csv  comparison.serial.csv
compare/scripts/: graphs.R
compare/src/: CMakeLists.txt  compare.cpp
delivery/: Makefile.omp  Makefile.serial
delivery/g24mpi/: Makefile  matFact-mpi  matFact-mpi.cpp
delivery/g24mpi/src/: filterFinalMatrix.cpp  filterFinalMatrix.h  initialLR.h
delivery/g24omp/omp/: Makefile  matFact-omp.cpp
delivery/g24omp/omp/src/: computeB.cpp  computeB.h  initialLR.cpp  initialLR.h  updateLR.cpp
delivery/g24omp/serial/: CMakeLists.txt  Makefile  matFact.cpp
delivery/g24omp/serial/src/: computeB.cpp  filterFinalMatrix.cpp  filterFinalMatrix.h  initialLR.h  readInput.h
helpers/: CMakeLists.txt  compare  compare.cpp  comparison.csv  comparison.mpi.csv  comparison.omp.csv  comparison.serial.csv  graph.gnuplot  graphs.R
helpers/test/: unitTests
instances/: inst0.in  inst1.in  inst1.mats  inst1000-1000-100-2-30.in  inst1000-1000-100-2-30.out  inst1000-1e6-1000-1-3.in  inst1000-80000-20-10-1000.out  inst1e6-100-700-1-3.out  inst2.in  inst2.mats  inst2.out  inst200-10000-50-100-300.in  inst200-10000-50-100-300.out  inst20000-10000-40-2-50.out  inst30-40-10-2-10.in  inst30-40-10-2-10.out  inst400-50000-30-200-500.in  inst400-50000-30-200-500.out  inst500-500-20-2-100.in  inst500-500-20-2-100.out  inst50000-5000-100-2-5.in  inst50000-5000-100-2-5.out  inst600-10000-10-40-400.in  inst600-10000-10-40-400.out  inst60000-2000-200-10-20.out  instML100k.in  instML100k.out  instML1M.out
labs/lab-1/: CMakeLists.txt  omp-1.c
labs/lab-2/: CMakeLists.txt  omp-2.c
mpi/: CMakeLists.txt  Makefile  matFact-mpi.cpp  matFact.cpp
mpi-c/: CMakeLists.txt  matFact-mpi  matFact-mpi.c
mpi-c/report/: main.bib
mpi-c/src/: blockAllocation.h  computeB.h  filterFinalMatrix.h  initialLR.h  readInput.h  structures.h  updateLR.h  verifyResult.h
mpi/report/: main.tex
mpi/src/: Array.cpp  Array.h  Grid.cpp  Grid.h  NonZero.cpp  NonZero.h  computeB.cpp  computeB.h  filterFinalMatrix.cpp  filterFinalMatrix.h  info.cpp  info.h  initialLR.cpp  initialLR.h  readInput.c  readInput.cpp  readInput.cpp.bak  readInput.h  testFunc.cpp  testFunc.h  updateLR.cpp  updateLR.h  verifyResult.cpp
omp/: CMakeLists.txt  mat  matFact-omp  matFact-omp.cpp
omp/report/: main.tex
omp/src/: computeB.cpp  computeB.h  filterFinalMatrix.cpp  filterFinalMatrix.h  initialLR.cpp  initialLR.h  matFact.cpp  matFact.h  omp.cpp  readInput.cpp  readInput.h  updateLR.cpp  updateLR.h  verifyResult.cpp  verifyResult.h  writeInitialMatrices.cpp  writeInitialMatrices.h  writeMatrices.cpp
omp/test/: unitTests
omp/tests/: CMakeLists.txt  instances.cpp
serial/: CMakeLists.txt  file.mat  matFact  matFact.c  matFact.cpp  test.py
serial/instances/: inst0.mats  test.mats
serial/src/: CMakeLists.txt  computeB.cpp  computeB.h  filterFinalMatrix.cpp  filterFinalMatrix.h  initialB.cpp  initialB.h  initialLR.cpp  initialLR.h  matFact.cpp  matFact.h  printMatrix.cpp  printMatrix.h  readInput.cpp  readInput.h  updateB.cpp  updateB.h  updateLR.cpp  updateLR.h  verifyResult.cpp  verifyResult.h  writeInitialMatrices.cpp  writeInitialMatrices.h  writeMatrices.cpp  writeMatrices.h
serial/test/: CMakeLists.txt  matrix.cpp
